2008-09-02  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Contact tracker frequently when the number of connections are 0	and
	download is not finished yet.
	* src/ActivePeerConnectionCommand.cc
	* src/BtAnnounce.h
	* src/DefaultBtAnnounce.cc
	* src/DefaultBtAnnounce.h
	* test/MockBtAnnounce.h
	
2008-09-02  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Moved threshold values to UTPexExtensionMessage.
	* src/DefaultBtInteractive.cc
	* src/Peer.cc
	* src/Peer.h
	* src/UTPexExtensionMessage.cc
	* src/UTPexExtensionMessage.h
	* test/UTPexExtensionMessageTest.cc

2008-09-02  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added _incoming member to Peer class and made it true if the peer
	initiated connection. Don't add those peer to UTPex message.
	If extended handshake is received, assign _incoming to false.
	* src/DefaultBtInteractive.cc
	* src/HandshakeExtensionMessage.cc
	* src/Peer.cc
	* src/Peer.h
	* src/PeerListenCommand.cc
	
2008-09-02  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made files whose name ends with ".gz", ".tgz" not inflated by Content
	Encoding Decoder. Removed size threshold for turning off on the fly
	inflation because resulting file may or may not be inflated depending
	on the file size and I think it is not expected by users.
	This change fixes segmentation fault when Metalink file contains gzipped
	file and its filesize is provided.
	* src/HttpResponseCommand.cc
	* src/HttpResponseCommand.h
	
2008-09-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made Cookie immutable.
	* src/Cookie.cc
	* src/Cookie.h
	* src/CookieParser.cc
	* src/CookieParser.h
	* src/CookieStorage.cc
	* test/CookieParserTest.cc
	* test/CookieStorageTest.cc
	* test/NsCookieParserTest.cc
	* test/Sqlite3MozCookieParserTest.cc
	
2008-09-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed CookieBox, CookieBoxFactory.
	* src/CookieBox.cc
	* src/CookieBox.h
	* src/CookieBoxFactory.cc
	* src/CookieBoxFactory.h
	* src/Makefile.am
